# fts-encrypted

./: .gitignore  Cargo.toml  README.md  logo.xcf
src/: aes_helper.rs  bitpacking.rs  doc_id.rs  error.rs  fts.rs  lib.rs  omit_english.rs  symmetric_key.rs  token_encryption.rs  tokenizer.rs
test_stories/: ballade_of_ping_pong.txt  ballet_girl.txt  boat_that_a_int.txt  cavaliers_valentine.txt  doctors_disagree.txt  hoss.txt  how_i_spoke_the_word.txt  how_the_money_goes.txt  hullo.txt  lugubrious_whing_whang.txt  mystery_of_giligal.txt  nine_little_goblins.txt  old_fashioned_chair.txt  our_polite_parents.txt  our_very_best_wishes.txt  reflective_retrospect.txt  rule_of_three.txt  runaway_toys.txt  the_gusher.txt  the_warrior.txt  threnody.txt  tim_flanagans_mistake.txt
